# gloop

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  architecture.md  fig2.odp  introduction.md  todo.md
src/: CMakeLists.txt
src/cmalloc/: CMakeLists.txt  gpualloc.h
src/gipc/: CMakeLists.txt  gipc.cu  gipc.cuh  mapped.cuh  utility.cuh
src/gloop/: .clang-format  CMakeLists.txt  alloc.cuh  apply.cuh  benchmark.h  bitwise_cast.h  buffer.cuh  code.cuh  command.h  config.h  copy_work.cu  copy_work.cuh  copy_work_pool.cu  copy_work_pool.cuh  copy_worker.cu  copy_worker.cuh  data_log.cc  data_log.cu  data_log.h  debug.h  device_callback.cuh  device_context.cuh  device_data.cuh  device_loop.cu  device_loop.cu.h  device_loop.cuh  device_loop.inline.cuh  device_loop_inlines.cuh  device_memory.cu  device_memory.cuh  dma_queue.cu  dma_queue.cuh  dump_memory.cu  dump_memory.cuh  entry.cuh  extract-apis.py  fs.cu  fs.cu.h  fs.cuh  function.cuh  (+67 more)
src/gloop/utility/: net_constants.h  net_debug.h  util.cu  util.cu.h
src/gpufs/: CMakeLists.txt
src/gpufs/gpufs_con_lib.user/: CMakeLists.txt
src/gpufs/libgpufs/: CMakeLists.txt  Makefile  cpu_ipc.cu  cpu_ipc.cu.h  fs_calls.cu.h  fs_constants.h  fs_initializer.cu  fs_initializer.cu.h  host_loop.cu  host_loop.h  util.cu.h
src/gpufs/samples/: CMakeLists.txt
src/gpufs/samples/bigmatrix_mmap/: bigmatrix_nofs.cu  bigmatrix_nofs_naive.cu  fs.cu
src/gpufs/samples/grep_text_gloop/: gloop.h  grep_text_gpu.cu
src/gpufs/samples/img/: fs.cu
src/gpufs/samples/matmul/: experiment_res  matrixMul.cu
src/gpufs/samples/matmul_gloop/: all_results  gloop.h  matrixMul.cu  matrixMul_kernel.cu  mm
src/gpufs/samples/memcopy/: CMakeLists.txt  cp.cpp  fs.cu
src/gpufs/samples/memcopy_gloop/: CMakeLists.txt  cp.cu  fs.cu
src/gpufs/samples/memcopy_gloop_manual/: CMakeLists.txt  cp.cu  fs.cu  gloop.h
src/hooks/: CMakeLists.txt  extract-apis.py  gloop.cc  gloop.h  gnode.cc  gnode.h  host_loop.cc  host_loop.h  library.cc  main-loop.cc  main_loop.cc  main_loop.h  redirector.cc  redirector.cu  redirector.h
src/misc/: axpy.cu
src/samples/: CMakeLists.txt
src/samples/copy/: CMakeLists.txt  cp.cu  fs.cu
src/samples/copy2/: CMakeLists.txt  cp.cu  fs.cu
src/samples/direct_copy/: CMakeLists.txt  cp.cu  fs.cu
src/samples/dma/: CMakeLists.txt  main.cu
src/samples/dma_batching/: CMakeLists.txt  main.cu
src/samples/echo_server/: CMakeLists.txt  common.h  gpu_client.cu  gpu_server.cu  gpu_socket_bw_server.cu  microbench_util.h
src/samples/gpgpu-sim/: CMakeLists.txt  gpgpu-sim-common.h
src/samples/grep_text/: CMakeLists.txt  README  db_test.txt  fs.cu  gloop.h  gpu_timing  grep_text_cpu.cpp  grep_text_gpu.cu  grep_text_gpu_mmap.cu  grep_text_gpu_nofs.cu  main.cu
src/samples/grep_text_simple/: CMakeLists.txt  main.cu
src/samples/hello/: CMakeLists.txt  main.cu
src/samples/img/: CMakeLists.txt  fs.cu  img.cuh  img_gpu.cu  img_nogpufs.cu  outputr  test_in
src/samples/img_non_mmap/: CMakeLists.txt  fs.cu  img_gpu.cu
src/samples/img_non_mmap_pullkernels/: CMakeLists.txt  fs.cu  img.cuh  img_gpu.cu  img_nogpufs.cu
src/samples/indirect/: CMakeLists.txt  indirect.cu
src/samples/iobench/: CMakeLists.txt  iobench.cu
src/samples/iobench2/: CMakeLists.txt  cp.cu  fs.cu
src/samples/launch/: CMakeLists.txt  launch.cu
src/samples/launch-async/: CMakeLists.txt  launch.cu
src/samples/loop/: CMakeLists.txt  launch.cu
src/samples/matmul/: CMakeLists.txt  Makefile  marching_complete_temp.cpp  matrixMul.cu  matrixMulCheck.cu  matrixMul_kernel.cu
src/samples/matmul_gpufs/: CMakeLists.txt  matrixMul.cu  matrixMul_kernel.cu  shrQATest.h
src/samples/matmul_server/: CMakeLists.txt  cpu_client.cc  gpu_client.cu  gpu_server.cu  gpu_socket_bw_server.cu  matmul_server_config.h  microbench_util.h
src/samples/matmul_server_eval/: CMakeLists.txt  gpu_client.cu  matmul_server_config.h
src/samples/matmul_server_fine_grained/: CMakeLists.txt  common.h  cpu_client.cc  gpu_client.cu  gpu_server.cu  matmul_server_config.h  microbench_util_cpu.h
src/samples/matrix/: CMakeLists.txt  main.cu
src/samples/memcopy/: CMakeLists.txt  cp.cpp  cp.cu  fs.cu  gloop.h
src/samples/memcopy_manual/: CMakeLists.txt  cp.cpp  cp.cu  fs.cu  gloop.h
src/samples/native-throttle/: CMakeLists.txt  throttle.cu
src/samples/parboil2/: CMakeLists.txt  README.md
src/samples/parboil2/bfs/: CMakeLists.txt
src/samples/parboil2/common/: Makefile.conf
src/samples/parboil2/cutcp/: CMakeLists.txt
src/samples/parboil2/histo/: CMakeLists.txt
src/samples/parboil2/histo-gloop/: main.cu
src/samples/parboil2/lbm/: CMakeLists.txt
src/samples/parboil2/lbm-gloop/: CMakeLists.txt  lbm.cu  lbm.h  lbm_kernel.cu  main.cu
src/samples/parboil2/mri-gridding/: CMakeLists.txt
src/samples/parboil2/mri-gridding-gloop/: CMakeLists.txt  CUDA_interface.cu  CUDA_interface.h  GPU_kernels.cu  main.cu  scanLargeArray.cu  scanLargeArray.h  sort.cu  sort.h
src/samples/parboil2/mri-q/: CMakeLists.txt
src/samples/parboil2/sad/: CMakeLists.txt
src/samples/parboil2/sgemm/: CMakeLists.txt
src/samples/parboil2/spmv/: CMakeLists.txt
src/samples/parboil2/stencil/: CMakeLists.txt
src/samples/parboil2/stencil-gloop/: kernels.cu  main.cu
src/samples/parboil2/tpacf-gloop/: CMakeLists.txt  main.cu  tpacf_kernel.cu
src/samples/parboil2/tpacf-gloop-fine-grained/: CMakeLists.txt  tpacf_kernel.cu
src/samples/parboil2/tpacf-kernel/: CMakeLists.txt  (+2 more)
src/samples/proportional-throttle/: CMakeLists.txt  throttle.cu
src/samples/rodinia/: CMakeLists.txt
src/samples/seqread/: CMakeLists.txt  seqread.cu
src/samples/shared/: CMakeLists.txt  shared.cu  throttle.cu
src/samples/simple/: CMakeLists.txt  cp.cu  fs.cu
src/samples/throttle/: CMakeLists.txt  throttle.cu
src/samples/throttle-pre/: CMakeLists.txt  throttle.cu
src/samples/throttle-statistics/: CMakeLists.txt  throttle.cu
src/samples/throttle2/: CMakeLists.txt  throttle.cu
src/samples/throttle3/: CMakeLists.txt  throttle.cu
tools/rewrite_lambda/: CMakeLists.txt  rewrite_lambda.cc
(+176 files in other folders)
