#add_subdirectory(hello)
#add_subdirectory(matmul_gpufs)
add_subdirectory(matmul)
#add_subdirectory(memcopy)
#add_subdirectory(memcopy_manual)
add_subdirectory(grep_text)
add_subdirectory(throttle)
add_subdirectory(proportional-throttle)
add_subdirectory(seqread)
add_subdirectory(copy)
add_subdirectory(copy2)
add_subdirectory(echo_server)
add_subdirectory(launch)
add_subdirectory(indirect)
