#add_subdirectory(matmul_gpufs)
add_subdirectory(matmul)
#add_subdirectory(memcopy)
#add_subdirectory(memcopy_manual)
add_subdirectory(grep_text)
add_subdirectory(throttle)
add_subdirectory(throttle-pre)
add_subdirectory(throttle-statistics)
add_subdirectory(throttle2)
add_subdirectory(throttle3)
add_subdirectory(shared)
add_subdirectory(proportional-throttle)
add_subdirectory(native-throttle)
add_subdirectory(seqread)
add_subdirectory(copy)
add_subdirectory(copy2)
add_subdirectory(echo_server)
add_subdirectory(matmul_server)
add_subdirectory(matmul_server_eval)
add_subdirectory(matmul_server_fine_grained)
add_subdirectory(loop)
add_subdirectory(launch)
add_subdirectory(launch-async)
add_subdirectory(indirect)
add_subdirectory(img)
add_subdirectory(img_non_mmap)
add_subdirectory(parboil2)
add_subdirectory(rodinia)
add_subdirectory(gpgpu-sim)
add_subdirectory(iobench)
add_subdirectory(iobench2)
